update school titles

--- a/schools/acts-secondary-school.html
+++ b/schools/acts-secondary-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Acts Secondary School | Eduprov</title>
+  <title>Acts Secondary School School Information, Academics,  | Eduprov</title>
   <meta name="description" content="Admission in ACTS Secondary School Bangalore with Complete Information on Admission Procedure, Documents required and lot more contact+91-9538801147
     ">
   <meta name="keywords"
