--- a/schools/aurobindo-memorial-school.html
+++ b/schools/aurobindo-memorial-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Sri Aurobindo Memorial School | Eduprov</title>
+  <title>Sri Aurobindo Memorial School  School Information  | Eduprov</title>
   <meta name="description" content="This Gurukul also has a well-designed PUC curriculum running in the best PUC college in Bangalore
     ">
   <meta name="keywords"
