--- a/schools/baldwin-girls-high-school.html
+++ b/schools/baldwin-girls-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Baldwin Girls High School | Eduprov</title>
+  <title>Baldwin Girls High School School Information,Programme  | Eduprov</title>
   <meta name="description" content="The school offers ICSE [Indian Certificate of Secondary Education]as a course of study. The Primary School section (from Pre-Nursery to Standard IV)
     ">
   <meta name="keywords"
