--- a/schools/bishop-cotton-boys-school.html
+++ b/schools/bishop-cotton-boys-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Bishop Cotton Boys’ School | Eduprov</title>
+  <title>Bishop Cotton Boys’ School School Information,Academics | Eduprov</title>
   <meta name="description" content="Bishop Cotton Boys School Admission On-going in Bangalore | The Academic year 2020-2021 | The school offers ICSE & ISC Streams.
     ">
   <meta name="keywords"
