--- a/schools/candor-international-school.html
+++ b/schools/candor-international-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Candor International School| Eduprov</title>
+  <title>Candor International School School Information,Primary School,Middle School, | Eduprov</title>
   <meta name="description" content="Candor International School is a co-educational international school in Bangalore, Karnataka | Check out the courses offered and the admission process
     ">
   <meta name="keywords"
