--- a/schools/christ-school.html
+++ b/schools/christ-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Chirst School | Eduprov</title>
+  <title>Chirst School School Information,Curriculum | Eduprov</title>
   <meta name="description" content="Christ School Bangalore is one of the best schools in Bangalore, providing practical exposure to students | Get admission done with the help of eduprov
     ">
   <meta name="keywords"
