--- a/schools/delhi-public-school.html
+++ b/schools/delhi-public-school.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Delhi Public School | Eduprov</title>
-  <meta name="description" content="Admission in ACTS Secondary School Bangalore with Complete Information on Admission Procedure, Documents required and lot more contact+91-9538801147
+  <title>Delhi Public School  School Information,   CBSE Syllabus  | Eduprov</title>
+  <meta name="description" content="
     ">
   <meta name="keywords"
     content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
