--- a/schools/francis-xavier-girls-high-school.html
+++ b/schools/francis-xavier-girls-high-school.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>St. Francis Xavier Girls High School | Eduprov</title>
-  <meta name="description" content="R.T.Nagar Public School was one of the schools established Twenty Year ago. It has gained popularity over the years. The founder Late Mr. B. Ramaiah.
+  <title>St. Francis Xavier Girls High School  School Information,Courses offered | Eduprov</title>
+  <meta name="description" content="
     ">
   <meta name="keywords"
     content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
