--- a/schools/geetanjali-vidyalaya.html
+++ b/schools/geetanjali-vidyalaya.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Geetanjali Vidyalaya | Eduprov</title>
+  <title>Geetanjali Vidyalaya School Information, | Eduprov</title>
   <meta name="description" content="Geetanjali Vidyalaya Admission On-Going for the Academic year 2020-21 | School Provides AISSE Board from class 1-10th and AISSCE for class 11th and 12th
     ">
   <meta name="keywords"
