--- a/schools/godwin-public-school.html
+++ b/schools/godwin-public-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Godwin Public School | Eduprov</title>
+  <title>Godwin Public School School Information,Academics | Eduprov</title>
   <meta name="description" content="Godwin Public School Admission On-Going for Academic year 2020-21 | Godwin Public School Affiliated to Karnataka Secondary Education Board
     ">
   <meta name="keywords"
