--- a/schools/good-shepherd-high-school.html
+++ b/schools/good-shepherd-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Good Shepherd High School | Eduprov</title>
+  <title>Good Shepherd High School School Information,Programme | Eduprov</title>
   <meta name="description" content="Good Shepherd International School was founded by Dr.P.C.Thomas in February 1977. An educator to the core, his school is no doubt reflective..
     ">
   <meta name="keywords"
