--- a/schools/inventure-academy.html
+++ b/schools/inventure-academy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Inventure Academy | Eduprov</title>
+  <title>Inventure Academy College Information,Curriculum | Eduprov</title>
   <meta name="description" content="We, at Indo Asian Group, incubate young minds, to be active, positive, effective . welcome you to the threshold of this premier institution of higher education
     ">
   <meta name="keywords"
