--- a/schools/jain-international-school.html
+++ b/schools/jain-international-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title> Jain International Residential School | Eduprov</title>
+  <title> Jain International Residential School  School Information, Commerce Stream | Eduprov</title>
   <meta name="description" content="Jain International Residential School is co-educational boarding school under CBSE, IGCSE & IB curricula located in Bengaluru. For admissions, Fee visit EDUPROV
     ">
   <meta name="keywords"
