--- a/schools/josephs-boys-high-school.html
+++ b/schools/josephs-boys-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>St. Joseph’s Boys’ High School | Eduprov</title>
+  <title>St. Joseph’s Boys’ High School  School Information,  | Eduprov</title>
   <meta name="description" content="This Gurukul also has a well-designed PUC curriculum running in the best PUC college in Bangalore
     ">
   <meta name="keywords"
