--- a/schools/little-flower-public-school.html
+++ b/schools/little-flower-public-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Little Flower Public School | Eduprov</title>
+  <title>Little Flower Public School School Information,Subjects | Eduprov</title>
   <meta name="description" content="Greenwood High International | Admission Open for the Academic year 2020-21 | Eduprov Can help you get admission in one of the top schools of Bangalore
     ">
   <meta name="keywords"
