--- a/schools/mithry-vidyanikethan.html
+++ b/schools/mithry-vidyanikethan.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Maithry Vidyanikethan  | Eduprov</title>
+  <title>Maithry Vidyanikethan School Information,Academics | Eduprov</title>
   <meta name="description" content="Maithry Vidyanikethan Admission On-Going for 2020-21 | The school is established in 2003 and affiliated to the Central Board of Secondary Education
     ">
   <meta name="keywords"
