--- a/schools/national-high-school.html
+++ b/schools/national-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>National High School | Eduprov</title>
+  <title>National High School  School Information,Admission | Eduprov</title>
   <meta name="description" content="National High School Admission On-Going for the Academic year 2020-21 | Admission is open to everyone without regard to religion, caste, or creed.
     ">
   <meta name="keywords"
