--- a/schools/national-public-school.html
+++ b/schools/national-public-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>National Public School | Eduprov</title>
+  <title>National Public School  School Information,Academic | Eduprov</title>
   <meta name="description" content="National Public School, Koramangala was established in 2003 This Institution is affiliated to the Central Board of Secondary Education (CBSE),
     ">
   <meta name="keywords"
