--- a/schools/premier-high-school.html
+++ b/schools/premier-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Premier High School  | Eduprov</title>
+  <title>Premier High School  School Information,Academic | Eduprov</title>
   <meta name="description" content="Premier High School Admission On-Going for the Academic year 2020-21 | School Provides Karnataka Secondary Education Examination Board from class 1-10th
     ">
   <meta name="keywords"
