--- a/schools/presidency-school.html
+++ b/schools/presidency-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Presidency School | Eduprov</title>
+  <title>Presidency School School Information,Academic | Eduprov</title>
   <meta name="description" content="Presidency School Admission On-going for the academic year 2020-21 | Kindergarten | Primary | High School | Eduprov Can help you get admission in top schools.
     ">
   <meta name="keywords"
