--- a/schools/ravindra-bharathi-global-school.html
+++ b/schools/ravindra-bharathi-global-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Ravindra Bharathi Global school  | Eduprov</title>
+  <title>Ravindra Bharathi Global school  School Information,Academic  | Eduprov</title>
   <meta name="description" content="Ravindra Bharathi Global School Admission On-Going for the Academic year 2020-21 | School Provides CBSE Board from class 1-10th
     ">
   <meta name="keywords"
