--- a/schools/sacred-heart-girls-high-school.html
+++ b/schools/sacred-heart-girls-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Sacred Heart Girls High School | Eduprov</title>
+  <title>Sacred Heart Girls High School School Information,Programme | Eduprov</title>
   <meta name="description" content="Sacred Heart Girls' High School is run by the Sisters of the Good Shepherd, the congregation founded by St Mary Euphrasia Pelletier.
     ">
   <meta name="keywords"
