--- a/schools/sarala-birla-academy.html
+++ b/schools/sarala-birla-academy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Sarala Birla Academy (SBA) | Eduprov</title>
+  <title>Sarala Birla Academy (SBA)School Information,curriculum | Eduprov</title>
   <meta name="description" content="Sarala Birla Academy (SBA) Admission On-going for the Academic year 2020-2021 | The curriculum (IBDP, ICSE, ISC, and CAIE) offered at SBA ...
     ">
   <meta name="keywords"
