--- a/schools/shishya-beml-school.html
+++ b/schools/shishya-beml-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Shishya BEML Public School  | Eduprov</title>
+  <title>Shishya BEML Public School School Information,Curriculum  | Eduprov</title>
   <meta name="description" content="Shishya BEML Public School Admission On-Going for the Academic year 2020-21 | School received CBSE affiliation up to Class 10 in the year 2000
     ">
   <meta name="keywords"
