--- a/schools/sindhi-high-school.html
+++ b/schools/sindhi-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Sindhi High School (Kumara Krupa) | Eduprov</title>
+  <title>Sindhi High School (Kumara Krupa)  School Information | Eduprov</title>
   <meta name="description" content="This Gurukul also has a well-designed PUC curriculum running in the best PUC college in Bangalore
     ">
   <meta name="keywords"
