--- a/schools/sophia-high-school.html
+++ b/schools/sophia-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Sophia High School | Eduprov</title>
+  <title>Sophia High School School Information,Academics | Eduprov</title>
   <meta name="description" content="Sophia High School Admission On-going in Bangalore | The Academic year 2020-2021 | The school offers ICSE [Indian Certificate of Secondary Education
     ">
   <meta name="keywords"
