--- a/schools/stonehill-international-school.html
+++ b/schools/stonehill-international-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Stonehill International School | Eduprov</title>
+  <title>Stonehill International School School Information,Programme | Eduprov</title>
   <meta name="description" content="Stonehill is fully accredited by the Council of International Schools (CIS) and the New England Association of Schools and Colleges (NEASC).
     ">
   <meta name="keywords"
