--- a/schools/treamis-world-school.html
+++ b/schools/treamis-world-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Treamis World School  | Eduprov</title>
+  <title>Treamis World School School Information  | Eduprov</title>
   <meta name="description" content="R.T.Nagar Public School was one of the schools established Twenty Year ago. It has gained popularity over the years. The founder Late Mr. B. Ramaiah.
     ">
   <meta name="keywords"
