--- a/schools/united-mission-school.html
+++ b/schools/united-mission-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>United Mission School   | Eduprov</title>
+  <title>United Mission School School Information  | Eduprov</title>
   <meta name="description" content="United Mission School Admission On-going for 2020-2021 | The school offers English medium education and is affiliated to the KSEEB.
     ">
   <meta name="keywords"
