--- a/schools/vibgyor-high-school.html
+++ b/schools/vibgyor-high-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>VIBGYOR High School  | Eduprov</title>
+  <title>VIBGYOR High School Information,CISCE,Primary,CAIE | Eduprov</title>
   <meta name="description" content="VIBGYOR Group of Schools is a chain of schools Admission on-going for the academic year 2020-21 in Bangalore | Eduprov Can help you get admission
     ">
   <meta name="keywords"
