--- a/schools/greenwood-high-international-school.html
+++ b/schools/greenwood-high-international-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Greenwood High International School | Eduprov</title>
+  <title>Greenwood High International School  School Information,Academics | Eduprov</title>
   <meta name="description" content="Greenwood High International | Admission Open for the Academic year 2020-21 | Eduprov Can help you get admission in one of the top schools of Bangalore
     ">
   <meta name="keywords"
