--- a/schools/shree-swaminarayan-gurukul.html
+++ b/schools/shree-swaminarayan-gurukul.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Shree Swaminarayan Gurukul International School | Eduprov</title>
+  <title>Shree Swaminarayan Gurukul International School School Information | Eduprov</title>
   <meta name="description" content="This Gurukul also has a well-designed PUC curriculum running in the best PUC college in Bangalore
     ">
   <meta name="keywords"
