update Course titles

--- a/arts-humanities.html
+++ b/arts-humanities.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
   <title>Engineering | Course</title>
-  <meta name="description" content="" />
+  <meta name="description" content="Specializations and courses in the arts and humanities including fine arts, history, and philosophy
+  " />
+   <meta name="keywords" content="
+  
+  " />
 
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
