--- a/colleges.html
+++ b/colleges.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Colleges | EDUPROV</title>
+  <meta name="description" content="A college is an educational institution or a constituent part of one. A college may be a degree-awarding tertiary educational institution, a part of a collegiate or fede'ral university, an institution offering vocational education, or a secondary school.
+    " />
+  <meta name="keywords" content="
+    
+    " />
   <link rel="stylesheet" href="dist/css/bootstrap.css">
   <link rel="stylesheet" href="faicon/css/all.css">
   <link rel="stylesheet" href="blog.css">
