--- a/commerce.html
+++ b/commerce.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Commerce | EDUPROV</title>
   <meta name="description" content="
-    Commerce is a field which students who have an interest in the field of financial 
-    information/transactions, trading of economic value, etc." />
+  Commerce is a field which students who have an interest in the field of financial information/transactions, trading of economic value, etc." />
   <meta name="keywords" content="
     
     " />
