--- a/contact-form.html
+++ b/contact-form.html
@@ -5,31 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Contact US | EDUPROV</title>
-  <meta name="description" content=" "
-    />
-    <meta name=" keywords" content="abroad admission consultants, abroad education consultants, 
-    academic career coach, academic consultant in bangalore, admission, admission assistance ,
-     admission consultancy in bangalore, admission consultant, admission consultant in bangalore, 
-     admission consultant near me, admission guidance, admission guidance in bangalore, admission 
-     through management quota, admission through nri quota, bangalore university, best admission 
-     consultant in bangalore, best career guidance, best college admission consultant in bangalore, 
-     best colleges in bangalore, best education consultancy in bangalore, career counselling , 
-     career guidance, college, college admission, college admission assistance, 
-     college admission consultant in bangalore, college admission counselore near me,
-      college admission guidance, college admission in bangalore, college admission information,
-       college admission process, college admissions advice, college admissions consultant, 
-       college admissions counselor, college advisor, college consultant, college counselor,
-        college planning consultant, colleges in bangalore, direct admission, direct admission consultants, 
-        education, education admission guidance, education counsellor, educational consultants in bangalore,
-         educational guidance, foreign studies consultants, genuine admission consultant,
-          international admissions, international education consultancy, international student admission,
-           international university admission, mba admission assistance, nursing admission, 
-           overseas education consultant, overseas education consultants,
-            overseas education consultants near me, para-medical colleges in bangalore, puc admission, 
-            school admission, school admission assistance, student consultants, study abroad consultant, 
-            study abroad consultants in bangalore, university admission
-    
-    " />
+  <meta name="description" content="
+  " />
+<meta name="keywords" content="
+  
+  " />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
