--- a/law.html
+++ b/law.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="canonical" href="" />
+  <link rel="canonical" href=" " />
   <title>Undergraduate LAW,  Postgraduate LAW Law Courses | EDUPROV</title>
-  <meta name="description" content="LLB or Bachelor of Legislative Law is an undergraduate law degree which is a required in the field of law. LLB duration is 3 years. 
-    LLM is a postgraduate degree in law and an aspirant is required to possess a graduation degree in law to take up the course. 
-    " />
+  <meta name="description" content="Degree law courses: Candidates can obtain either an integrated law degree such as BA LLB, BBA LLB, BSC LLB, BCom LLB etc
+  " />
+<meta name="keywords" content="
+  
+  " />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
   <link rel="stylesheet" href="blog.css" />
