--- a/science.html
+++ b/science.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
   <title>Science | Course</title>
-  <meta name="description" content="" />
+  <meta name="description" content="science courses are intended to allow individuals to understand the relationships that science, technology. and society share in our everyday world.
+  " />
+<meta name="keywords" content="
+  
+  " />
 
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
