--- a/student-application-form.html
+++ b/student-application-form.html
@@ -6,28 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Student Application Form| EDUPROV</title>
   <meta name="description" content="
-    Commerce is a field which students who have an interest in the field of financial 
-    information/transactions, trading of economic value, etc." />
-  <meta name="keywords" content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
-    admission, admissions, counselling, counseling, bangalore counseling, bachelor of business administration, bachelor of business administration subjects, bachelor of business administration bba, subjects in bachelor 
-    of business administration, bachelor of business administration jobs, jobs for bachelor of business
-     administration, bachelor of business administration degree,  degree in bachelor of business administration, 
-     what is bachelor of business administration,  bachelor of business administration in canada, bachelor of 
-     business administration in india, bachelor of business administration course, bachelor of business administration
-      hons, bachelor of business administration bba syllabus, bachelor of business administration in australia, 
-      bachelor of business administration canada, bachelor of business administration colleges in mumbai, what is
-       ba in commerce, b.com professional, b.com professional accounting,  is b.com a professional course, 
-       b.com professional accounting subjects, is b.com a professional degree, after b.com professional courses, 
-       b.com professional subjects, b.com professional course, b.com professional course, b.com professional course,
-       b.com professional accounting syllabus, b.com professional courses,  b.com professional courses, 
-       b.com professional course details, what is b com professional course, professional course for 
-       b.com students, what is b.com professional, kristu jayanti college b.com professional, 
-       is b.com hons a professional course, b.com hons, syllabus of b.com hons, b.com hons syllabus, what is b.com hons,
-       b.com hons subjects, b.com hons subject list, b.com hons means, b.com hons colleges in india,
-       b.com hons colleges in delhi, b.com hons full form, b.com hons colleges in hyderabad, 
-       jobs for b.com hons, b.com hons result 2019, b com hons economics, b.com hons eligibility, 
-       subjects in b.com hons, b.com hons colleges in bangalore, what is difference between b.com and b.com honours, 
-       jobs for b.com hons graduates
+    " />
+  <meta name="keywords" content="
     
     " />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
