--- a/courses.html
+++ b/courses.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Courses Offered MEDICAL, ENGINEERING And MBA  | EDUPROV</title>
+  <meta name="description" content="
+    " />
+  <meta name="keywords" content="
+    
+    " />
   <link rel="stylesheet" href="dist/css/bootstrap.css">
   <link rel="stylesheet" href="faicon/css/all.css">
   <link rel="stylesheet" href="blog.css">
