--- a/education.html
+++ b/education.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Education Course | EDUPROV</title>
-  <meta name="description" content=" "
-    />
+  <meta name="description" content="Education is the study of the process of receiving and giving systematic instruction. AS a degree, it mixes a theoretical grounding in the history, anthropology, sociology
+  " />
+<meta name="keywords" content="
+  
+  " />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
