--- a/engineering.html
+++ b/engineering.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
   <title>Engineering | Course</title>
-  <meta name="description" content="" />
+  <meta name="description" content="Engineering is a stream of education that involves the application of Science, Technology and Mathematics to innovate, design, develop and maintain 
+    " />
+  <meta name="keywords" content="
+    
+    " />
 
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
