--- a/mba.html
+++ b/mba.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Postgraduate, MBA Courses | EDUPROV</title>
-  <meta name="description" content="" />
+  <meta name="description" content="MBA is an internationally accredited post-graduate degree for developing business and management skills amongst future business leaders and entrepreneurs." />
   <meta name="keywords" content="" />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
