--- a/medical.html
+++ b/medical.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Undergraduate Medical, Postgraduate Medical, Medical Courses | EDUPROV</title>
+  <meta name="description" content="Medical courses offered in various specialisations including medical and biomedical sciences, pharmacy. allied health, nursing, health, and fitness
+  " />
+<meta name="keywords" content="
   
+  " />
   <link rel="stylesheet" href="dist/css/bootstrap.css">
   <link rel="stylesheet" href="faicon/css/all.css">
   <link rel="stylesheet" href="blog.css">
