--- a/technical.html
+++ b/technical.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>  Undergraduate, Postgraduate, Technical Courses  | EDUPROV</title>
+  <meta name="description" content="Technical course means a unit of learning which yields skills, knowledge, and appreciation essential to the specific occupation for which the program was designed.
+  " />
+<meta name="keywords" content="
+  
+  " />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="faicon/css/all.css" />
