update college title tags

--- a/colleges/acharya-institute-of-technology.html
+++ b/colleges/acharya-institute-of-technology.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Acharya Institute of Technology | Eduprov</title>
+  <title>Acharya Institute of Technology College Information Course Admission Procedure  | Eduprov</title>
   <meta name="description" content="Acharya Institutes Get to know the Courses offered, Important Documents, Approved by AICTE and affiliated to Visvesaraya Technological University (VTU), Belgaum
     ">
   <meta name="keywords"
