--- a/colleges/acs-college-of-engineering.html
+++ b/colleges/acs-college-of-engineering.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>ACS College of Engineering | Eduprov</title>
+  <title>ACS College of Engineering College Information Course Admission Procedure | Eduprov</title>
   <meta name="description" content="ACS College of Engineering is one of the best engineering colleges in Bangalore, Get to know the Courses offered, Important Documents for admission
     ">
   <meta name="keywords"
