--- a/colleges/alliance-university.html
+++ b/colleges/alliance-university.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Alliance University | Eduprov</title>
+  <title>Alliance University College Information Course Admission Procedure | Eduprov</title>
   <meta name="description" content="Alliance University is a private state University located in Bengaluru. For course specializations, admissions, entrance, fees, ranking, placement visit EDUPROV
     ">
   <meta name="keywords"
