--- a/colleges/bangalore-institute-of-technology.html
+++ b/colleges/bangalore-institute-of-technology.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Bangalore Institute of Technology| Eduprov</title>
+  <title>Bangalore Institute of Technology College Information Course Admission Procedure | Eduprov</title>
   <meta name="description" content="Bangalore Institute of Technology established in 1979 & affiliated to VTU located in Bengaluru. To know about courses, admission, fees, placements visit EDUPROV
     ">
   <meta name="keywords"
