--- a/colleges/bms-college-of-engineering.html
+++ b/colleges/bms-college-of-engineering.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BMS College of Engineering | Eduprov</title>
+  <title>BMS College of Engineering College Information Courses Admission Procedure | Eduprov</title>
   <meta name="description" content="BMS College of Engineering is an autonomous engineering college located in Bengaluru. To know about courses, admission, fees, placements, ranking visit EDUPROV
     ">
   <meta name="keywords"
