update more titles

--- a/arts-humanities.html
+++ b/arts-humanities.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
-  <title>Engineering | Course</title>
+  <title>Arts and Humanities Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Specializations and courses in the arts and humanities including fine arts, history, and philosophy
   " />
    <meta name="keywords" content="
@@ -24,7 +24,6 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-  <title></title>
 </head>
 
 <body>
