--- a/designing.html
+++ b/designing.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Designing Course | EDUPROV</title>
+  <title>Designing Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content=" Design courses constitute domains like fashion design, interior design, textile design, jewellery design amongst many others"
     />
     <meta name=" keywords" content="
