--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Education Course | EDUPROV</title>
+  <title>Education Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Education is the study of the process of receiving and giving systematic instruction. AS a degree, it mixes a theoretical grounding in the history, anthropology, sociology
   " />
 <meta name="keywords" content="
