--- a/engineering.html
+++ b/engineering.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
-  <title>Engineering | Course</title>
+  <title>Engineering Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Engineering is a stream of education that involves the application of Science, Technology and Mathematics to innovate, design, develop and maintain 
     " />
   <meta name="keywords" content="
