--- a/law.html
+++ b/law.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href=" " />
-  <title>Undergraduate LAW,  Postgraduate LAW Law Courses | EDUPROV</title>
+  <title>Law Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Degree law courses: Candidates can obtain either an integrated law degree such as BA LLB, BBA LLB, BSC LLB, BCom LLB etc
   " />
 <meta name="keywords" content="
