--- a/para-medical.html
+++ b/para-medical.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Undergraduate, Diploma, Para-Medical | EDUPROV</title>
+  <title>Paramedical Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content=" The Paramedic course involves emergency medical services required in the pre-hospital environment." />
   <meta name="keywords" content="" />
   <link rel="stylesheet" href="dist/css/bootstrap.css">
