--- a/science.html
+++ b/science.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="canonical" href="" />
-  <title>Science | Course</title>
+  <title>Science Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="science courses are intended to allow individuals to understand the relationships that science, technology. and society share in our everyday world.
   " />
 <meta name="keywords" content="
