--- a/technical.html
+++ b/technical.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>  Undergraduate, Postgraduate, Technical Courses  | EDUPROV</title>
+  <title>Technical Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Technical course means a unit of learning which yields skills, knowledge, and appreciation essential to the specific occupation for which the program was designed.
   " />
 <meta name="keywords" content="
