--- a/commerce.html
+++ b/commerce.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Commerce | EDUPROV</title>
+  <title>Commerce Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="
   Commerce is a field which students who have an interest in the field of financial information/transactions, trading of economic value, etc." />
   <meta name="keywords" content="
