--- a/contact-form.html
+++ b/contact-form.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Contact US | EDUPROV</title>
+  <title>Contact Form For Students and Parents | EDUPROV</title>
   <meta name="description" content="
   " />
 <meta name="keywords" content="
