--- a/medical.html
+++ b/medical.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Undergraduate Medical, Postgraduate Medical, Medical Courses | EDUPROV</title>
+  <title>Medical Course Information Scope Exam Details | EDUPROV</title>
   <meta name="description" content="Medical courses offered in various specialisations including medical and biomedical sciences, pharmacy. allied health, nursing, health, and fitness
   " />
 <meta name="keywords" content="
