--- a/school.html
+++ b/school.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Schools | EDUPROV</title>
+  <title>School Information Academic Details | EDUPROV</title>
   <meta name="description" content="A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students or pupilsunder the direction of teachers.
   " />
 <meta name="keywords" content="
